# kamari-tool

./: Cargo.toml  PLUGIN_GUIDE.md  README.md
examples/example-blur/: Cargo.toml  plugin.json
examples/example-blur/src/: lib.rs
examples/example-filter/: manifest.json
examples/example-vintage/: Cargo.toml  plugin.json
examples/example-vintage/src/: lib.rs
kamari-plugin-api/: Cargo.toml  README.md
kamari-plugin-api/src/: api.rs  lib.rs  macros.rs  types.rs
pixelarteditor/: Cargo.toml
pixelarteditor/src/: 100.rs.bak  app.rs  constants.rs  editor.rs  file_operations.rs  lib.rs  types.rs
pixelarteditor/src/editor/: animation.rs  core.rs  file_operations.rs  mod.rs  rendering.rs  tools.rs  undo_redo.rs
pixelarteditor/src/plugins/: aseprite_plugin.rs  mod.rs  plugin_manager.rs  plugin_types.rs
pixelarteditor/src/ui/: canvas.rs  color_panel.rs  dialogs.rs  menu.rs  panels.rs
src/: app.rs  constants.rs  editor.rs  file_operations.rs  lib.rs  main.rs  types.rs
src/ui/: canvas.rs  color_panel.rs  dialogs.rs  menu.rs  mod.rs  panels.rs
