[workspace]
# Workspace configuration for the "kanari-sdk" project.
# Defines the overall structure and settings for the workspace.
# name = "kanari-sdk"
resolver = "2"                   # Use the version 2 feature resolver for more consistent feature resolution.

# Exclude List: Directories to be excluded from the workspace build.
# This can be useful for excluding third-party code or components 
# that are not directly part of the workspace's build process.
exclude = [
    
]

# Members List: Crates that are part of this workspace.
# These are the core components of the "kanari-sdk" project.
members = [
    "pixelarteditor",            # The main crate for the Kanari Art Editor.
]

# Profile Configurations: Define different build profiles for various scenarios.
[profile.bench]                  # Profile for benchmarking.
debug = true                     # Include debug information for profiling.
opt-level = 3                    # Maximum optimization level for performance.
lto = "thin"                     # Enable Link-Time Optimization (thin LTO for faster linking).
codegen-units = 1                # Reduce codegen units to improve LTO effectiveness (may increase compile time).

[profile.dev]                    # Profile for development builds.
debug = false                    # Disable debug information for easier debugging.
opt-level = 0                    # No optimization for faster compile times.
split-debuginfo = "unpacked"     # Configure debug info splitting for better debugger experience.
debug-assertions = true          # Enable debug assertions for development builds.
overflow-checks = true           # Enable overflow checks for development builds.
lto = false                      # Disable Link-Time Optimization for faster builds.
panic = 'unwind'                 # Enable unwinding for panic handling.
incremental = true               # Enable incremental compilation for faster builds.
codegen-units = 256              # Increase codegen units for faster parallel compilation.

[profile.ci]                     # Profile for Continuous Integration builds.
inherits = "test"                # Inherit settings from the 'test' profile (if defined, otherwise defaults).
debug = 0                        # Disable debug information for potentially faster and smaller builds.
incremental = false              # Disable incremental compilation for cleaner and more reliable CI builds.
codegen-units = 16               # Increase codegen units for potentially faster parallel compilation in CI.
opt-level = 1                    # Moderate optimization level for a balance of speed and performance.

[profile.release]                # Profile for release builds.
opt-level = 'z'                  # Optimize for size.
debug = false                    # Disable debug information for release binaries.
debug-assertions = false         # Disable debug assertions for release builds.
overflow-checks = false          # Disable overflow checks for release builds.
lto = true                       # Enable full Link-Time Optimization for maximum performance and smaller binaries.
panic = 'abort'                  # Remove unwinding code for panic handling.
codegen-units = 1                # Reduce codegen units to improve LTO effectiveness.
strip = true                     # Strip debug symbols from the final binary to reduce size.

# Workspace Package Configuration: Metadata for the entire workspace as a package.
# This information is used when publishing the SDK as a crate.
[workspace.package]
edition = "2024"                                                                                                   # Use Rust 2024 edition.
homepage = "https://kanari.site"                                                                                # Project homepage.
documentation = "https://docs.kanari.site"                                                                      # Link to project documentation.
version = "0.1.0"                                                                                                  # Current version of the SDK.
authors = ["Kanari"]                                                                                       # Authors of the SDK.
license = "Apache-2.0"                                                                                             # License information.
repository = "https://github.com/jamesatomc/pixelarteditor"                                                        # Link to the code repository.
description = "Kanari Art Editor"                                                                                 # Short description of the SDK.

# Workspace Dependencies: Dependencies that are shared across multiple crates in the workspace.
# Centralized dependency management for consistent versions.
[workspace.dependencies]
pixelarteditor = { path = "pixelarteditor" }  # Path to the pixelarteditor crate, which is part of the workspace.