[package]
name = "kamari-plugin-api"
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kamari Plugin API for developing external plugins"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "kamari_plugin_api"
crate-type = ["cdylib", "rlib"]
